fix flags alignment

--- a/static/less/ureport2.less
+++ b/static/less/ureport2.less
@@ -2385,6 +2385,14 @@ ul.poll-filters, .featured-stories-filters, ul.stories-filters {
     width: 80px;
     height: 100px;
     vertical-align: top;
+
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 15px;
+
+    }
   }
 
   a.footer-orgs-name {
